<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/machine_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context=".machineDetailFragment">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description_TV"
                    style="@style/DescriptionTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />


                <ImageView
                    android:id="@+id/inline_dimensions_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimensions_pic_height"
                    android:scaleType="fitCenter"
                    android:src="@drawable/place_holder_image" />

                <TextView
                    android:id="@+id/data_sheet_tv"
                    style="@style/LinkeTextInDetailStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/data" />

                <TextView
                    android:id="@+id/lubrication_chart_tv"
                    style="@style/LinkeTextInDetailStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lubrication_chart" />

                <TextView
                    android:id="@+id/spare_parts_tv"
                    style="@style/LinkeTextInDetailStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/spare_parts" />

                <Button
                    android:id="@+id/make_widget"
                    style="@style/buttons_in_machine_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_for_widget" />

                <Button
                    android:id="@+id/eff_calculation"
                    style="@style/buttons_in_machine_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calculate_efficiency" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</android.support.constraint.ConstraintLayout>