<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sparepart_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textIsSelectable="true"
    tools:context=".SparePartDetailFragment" >

    <TextView
        android:id="@+id/spare_part_name_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spare_part_description_margin"
        android:layout_marginEnd="@dimen/spare_part_description_margin"
        android:text="@string/spare_part_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/spare_part_section_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spare_part_description_margin"
        android:layout_marginTop="@dimen/spare_part_description_margin"
        android:text="@string/spare_part_section"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spare_part_name_tv" />

    <TextView
        android:id="@+id/spare_part_description_tv"
        style="@style/DescriptionTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spare_part_description_margin"
        android:layout_marginTop="@dimen/spare_part_description_margin"
        android:text="@string/spare_part_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spare_part_section_tv" />

</android.support.constraint.ConstraintLayout>